@@ -852,7 +852,6 @@ void on_job_exit(
         }
 
       svr_setjobstate(
-
         pjob,
         JOB_STATE_EXITING,
         JOB_SUBSTATE_RETURNSTD);
@@ -2147,7 +2146,6 @@ void req_jobobit(
       }
 
     log_event(
-
       PBSEVENT_ERROR | PBSEVENT_JOB,
       PBS_EVENTCLASS_JOB,
       jobid,
@@ -2185,7 +2183,6 @@ void req_jobobit(
       }
 
     req_reject(
-
       bad,
       0,
       preq,
@@ -2240,7 +2237,6 @@ void req_jobobit(
     }
 
   modify_job_attr(
-
     pjob,
     patlist,
     ATR_DFLAG_MGWR | ATR_DFLAG_SvWR,
@@ -2551,7 +2547,6 @@ void req_jobobit(
       }
 
     svr_setjobstate(
-
       pjob,
       JOB_STATE_EXITING,
       pjob->ji_qs.ji_substate);
