@@ -110,6 +110,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - add job exit status as 10th argument to the epilogue script
   b - fix truncated output in qmgr (peter h IPSec+jan n NANCO) 
   b - change so set_jobexid() gets called if JOB_ATR_egroup is not set
+  e - pbs_mom sisters can now tolerate an explicit group ID instead of only a
+      valid group name. This helps TORQUE be more robust to group lookup failures.
 
 2.3.6
   b - change back to not sending status updates until we get cluster addr message
